--- a/templates/base.html
+++ b/templates/base.html
@@ -46,85 +46,82 @@
 </head>
 
 <body>
+
   <header class="container-fluid fixed-top">
+
     <div id="topnav" class="row bg-nav pt-lg-2 d-none d-lg-flex">
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-        <a href="{% url 'home' %}" class="nav-link main-logo-link">
+
+      <div class="col-4">
+        <!-- Links -->
+        <div class="d-flex navlinksleft text-base">
+          <ul class="navbar-nav mr-auto d-flex flex-row">
+            <li class="nav-item active">
+              <a class="nav-link nav-link-padding" href="{% url 'home' %}">Home <span
+                  class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle nav-link-padding" href="#" id="navbarDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Shop
+              </a>
+              {% include 'includes/main-nav.html' %}
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle nav-link-padding" href="#" id="navbarDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                My Account
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                <a href="" class="dropdown-item">Manage Products</a>
+                {% endif %}
+                <a href="" class="dropdown-item">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                {% else %}
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                {% endif %}
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Title -->
+      <div class="col-4 text-center">
+        <a href="{% url 'home' %}" class="main-logo-link">
           <h2 class="logo-font my-0 title-font"><strong>Bull & Sea</strong> </h2>
         </a>
       </div>
-      
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-        <form method="GET" action="">
-          <div class="input-group w-100">
-            <input class="form-control border border-grey rounded-2 bg-searchbox" type="text" name="q"
-              placeholder="Search our site">
-            <div class="input-group-append">
-              <button class="form-control btn btn-searchbox border border-grey rounded-2" type="submit">
-                <span class="icon">
-                  <i class="fas fa-search"></i>
-                </span>
-              </button>
-            </div>
-          </div>
-        </form>
-      </div>
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-          <li class="list-inline-item dropdown">
-            <a class="text-base nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
-              <div class="text-center">
-                <div><i class="fas fa-user fa-lg"></i></div>
-                <p class="my-0">My Account</p>
+
+      <!-- Search box -->
+      <div class="col-4">
+        <div class="d-flex justify-content-end searchbarright">
+          <form class="form-inline" method="GET" action="">
+            <div class="input-group w-100">
+              <input class="form-control border border-grey rounded-2 bg-searchbox" type="text" name="q"
+                placeholder="Search our site">
+              <div class="input-group-append">
+                <button class="form-control btn btn-searchbox border border-grey rounded-2" type="submit">
+                  <span class="icon">
+                    <i class="fas fa-search"></i>
+                  </span>
+                </button>
               </div>
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="user-options">
-              {% if request.user.is_authenticated %}
-              {% if request.user.is_superuser %}
-              <a href="" class="dropdown-item">Manage Products</a>
-              {% endif %}
-              <a href="" class="dropdown-item">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-              {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-              {% endif %}
             </div>
-          </li>
-          <li class="list-inline-item">
-            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-base{% endif %} nav-link" href="">
-              <div class="text-center">
-                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                <p class="my-0">
-                  {% if grand_total %}
-                  ${{ grand_total|floatformat:2 }}
-                  {% else %}
-                  $0.00
-                  {% endif %}
-                </p>
-              </div>
-            </a>
-          </li>
-        </ul>
+          </form>
+        </div>
       </div>
 
-      
     </div>
-    <div class="row">
-      <nav class="navbar navbar-expand-lg navbar-light w-100">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          {% include 'includes/mobile-top-header.html' %}
-          {% include 'includes/main-nav.html' %}
-      </nav>
+
+    <div class="d-lg-none">
+      {% include 'includes/mobile-top-header.html' %}
   </div>
-  <!-- <div id="delivery-banner" class="row text-center">
-      <div class="col bg-black text-white">
-          <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
-      </div>            
-  </div> -->
+
   </header>
 
   {% if messages %}
