--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,25 +1,8 @@
-<div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav w-auto mx-auto">
-
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-base mr-5" href="#" id="candles-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Candles
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="candles-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item ">By Rating</a>
-            </div>
-        </li>
-
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-base mr-5" href="#" id="lifestyle-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Lifestyle
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item ">By Rating</a>
-            </div>
-        </li>
-
-    </ul>
-</div>
+<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <a class="dropdown-item" href="#">Candles</a>
+    <a class="dropdown-item" href="#">Lifestyle Products</a>
+    <a class="dropdown-item" href="#">Candle 1</a>
+    <a class="dropdown-item" href="#">Candle 2</a>
+    <a class="dropdown-item" href="#">Candle 3</a>
+    <a class="dropdown-item" href="#">Candle 4</a>
+  </div>
