--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,56 +1,81 @@
-<li class="list-inline-item">
-    <a class="text-base nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <div class="text-center">
-            <div><i class="fas fa-search fa-lg"></i></div>
-            <p class="my-0">Search</p>
+<div id="topnav" class="row bg-nav pt-lg-2 d-lg-none">
+    <div class="col-12">
+      <div class="row">
+        <!-- Title -->
+        <div class="col-6">
+          <a href="{% url 'home' %}" class="navbar-brand mobnavpadding">
+            <h2 class="logo-font my-0 title-font"><strong>Bull & Sea</strong></h2>
+          </a>
         </div>
-    </a>
-    <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-        <form class="form" method="GET" action="">
-            <div class="input-group w-100">
-                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                <div class="input-group-append">
-                    <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
-                        <span class="icon">
-                            <i class="fas fa-search"></i>
-                        </span>
+  
+        <!-- Collapse Button -->
+        <div class="col-6 text-right">
+            <div class="navbar-header mobnavpadding">
+                <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                  aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">Explore
+                </button>
+              </div>
+        </div>
+      </div>
+  
+      <!-- Collapsible Content -->
+      <div class="collapse navbar-collapse collapsedmenu w-100" id="navbarCollapse">
+        <!-- Search Bar -->
+        <div class="row">
+          <div class="col-12 flex-column">
+            <div class="d-flex mob-nav-link-padding">
+              <form class="form-inline" method="GET" action="">
+                <div class="input-group w-100">
+                  <input class="form-control border border-grey rounded-2 bg-searchbox" type="text" name="q"
+                    placeholder="Search our site">
+                  <div class="input-group-append">
+                    <button class="form-control btn btn-searchbox border border-grey rounded-2" type="submit">
+                      <span class="icon">
+                        <i class="fas fa-search"></i>
+                      </span>
                     </button>
+                  </div>
                 </div>
+              </form>
             </div>
-        </form>
-    </div>
-</li>
-<li class="list-inline-item dropdown">
-    <a class="text-base nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <div class="text-center">
-            <div><i class="fas fa-user fa-lg"></i></div>
-            <p class="my-0">My Account</p>
+          </div>
         </div>
-    </a>
-    <div class="dropdown-menu border-0" aria-labelledby="user-options">
-        {% if request.user.is_authenticated %}
-            {% if request.user.is_superuser %}
-                <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
-            {% endif %}
-            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-        {% else %}
-            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-        {% endif %}
-    </div>
-</li>
-<li class="list-inline-item">
-    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-base{% endif %} nav-link d-block d-lg-none" href="">
-        <div class="text-center">
-            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-            <p class="my-0">
-                {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
-                {% else %}
-                    $0.00
-                {% endif %}
-            </p>
+  
+        <!-- Links -->
+        <div class="row">
+          <div class="col-12">
+            <ul class="navbar-nav mob-nav-link-padding">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  My Account
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  {% if request.user.is_authenticated %}
+                  {% if request.user.is_superuser %}
+                  <a href="" class="dropdown-item">Manage Products</a>
+                  {% endif %}
+                  <a href="" class="dropdown-item">My Profile</a>
+                  <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                  {% else %}
+                  <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                  <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                  {% endif %}
+                </div>
+              </li>
+  
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Shop
+                </a>
+                {% include 'includes/main-nav.html' %}
+              </li>
+            </ul>
+          </div>
         </div>
-    </a>
-</li>
+      </div>
+    </div>
+  </div>
+  
+  
