style mobile menu and nav

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
             </h1>
             <div class="my-5">
                 <h5>
-                    <a href="" class="call-to-action-button btn btn-lg rounded-2 text-uppercase py-2">Discover our candles...</a>
+                    <a href="" class="call-to-action-button btn rounded-2 text-uppercase">Discover our candles...</a>
                 </h5>
             </div>
         </div>
