--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,4 +1,4 @@
-<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+<div class="dropdown-menu dropmenu-Mob" aria-labelledby="navbarDropdown">
     <a class="dropdown-item" href="#">Candles</a>
     <a class="dropdown-item" href="#">Lifestyle Products</a>
     <a class="dropdown-item" href="#">Candle 1</a>
