--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,81 +1,82 @@
 <div id="topnav" class="row bg-nav pt-lg-2 d-lg-none">
-    <div class="col-12">
-      <div class="row">
-        <!-- Title -->
-        <div class="col-6">
-          <a href="{% url 'home' %}" class="navbar-brand mobnavpadding">
-            <h2 class="logo-font my-0 title-font"><strong>Bull & Sea</strong></h2>
-          </a>
-        </div>
-  
-        <!-- Collapse Button -->
-        <div class="col-6 text-right">
-            <div class="navbar-header mobnavpadding">
-                <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                  aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">Explore
-                </button>
-              </div>
+  <div class="col-12">
+    <div class="row">
+      <!-- Title -->
+      <div class="col-6">
+        <a href="{% url 'home' %}" class="navbar-brand mobnavpadding">
+          <h2 class="logo-font my-0 title-font"><strong>Bull & Sea</strong></h2>
+        </a>
+      </div>
+
+      <!-- Collapse Button -->
+      <div class="col-6 text-right">
+        <div class="navbar-header mobnavpadding">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
         </div>
       </div>
-  
-      <!-- Collapsible Content -->
-      <div class="collapse navbar-collapse collapsedmenu w-100" id="navbarCollapse">
-        <!-- Search Bar -->
-        <div class="row">
-          <div class="col-12 flex-column">
-            <div class="d-flex mob-nav-link-padding">
-              <form class="form-inline" method="GET" action="">
-                <div class="input-group w-100">
-                  <input class="form-control border border-grey rounded-2 bg-searchbox" type="text" name="q"
-                    placeholder="Search our site">
-                  <div class="input-group-append">
-                    <button class="form-control btn btn-searchbox border border-grey rounded-2" type="submit">
-                      <span class="icon">
-                        <i class="fas fa-search"></i>
-                      </span>
-                    </button>
-                  </div>
+    </div>
+
+    <!-- Collapsible Content -->
+    <div class="collapse navbar-collapse collapsedmenu w-100" id="navbarNav">
+      <!-- Search Bar -->
+      <div class="row">
+        <div class="col-12 flex-column">
+          <div class="d-flex mob-nav-link-padding">
+            <form class="form-inline" method="GET" action="">
+              <div class="input-group w-100">
+                <input class="form-control border border-grey rounded-2 bg-searchbox" type="text" name="q"
+                  placeholder="Search our site">
+                <div class="input-group-append">
+                  <button class="form-control btn btn-searchbox border border-grey rounded-2" type="submit">
+                    <span class="icon">
+                      <i class="fas fa-search"></i>
+                    </span>
+                  </button>
                 </div>
-              </form>
-            </div>
+              </div>
+            </form>
           </div>
         </div>
-  
-        <!-- Links -->
-        <div class="row">
-          <div class="col-12">
-            <ul class="navbar-nav mob-nav-link-padding">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  My Account
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  {% if request.user.is_authenticated %}
-                  {% if request.user.is_superuser %}
-                  <a href="" class="dropdown-item">Manage Products</a>
-                  {% endif %}
-                  <a href="" class="dropdown-item">My Profile</a>
-                  <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                  {% else %}
-                  <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                  <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                  {% endif %}
-                </div>
-              </li>
-  
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Shop
-                </a>
-                {% include 'includes/main-nav.html' %}
-              </li>
-            </ul>
-          </div>
+      </div>
+
+      <!-- Links -->
+      <div class="row">
+        <div class="col-12">
+          <ul class="navbar-nav mob-nav-link-padding">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                My Account
+              </a>
+              <div class="dropdown-menu dropmenu-Mob" aria-labelledby="navbarDropdown">
+                {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                <a href="" class="dropdown-item">Manage Products</a>
+                {% endif %}
+                <a href="" class="dropdown-item">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                {% else %}
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                {% endif %}
+              </div>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Shop
+              </a>
+              {% include 'includes/main-nav.html' %}
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
-  
-  
+</div>
