--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle nav-link-padding" href="#" id="navbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle nav-link-padding caret-off" href="#" id="navbarDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Shop
               </a>
@@ -77,11 +77,11 @@
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle nav-link-padding" href="#" id="navbarDropdown" role="button"
+              <a class="nav-link dropdown-toggle nav-link-padding caret-off" href="#" id="navbarDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 My Account
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <div class="dropdown-menu dropmenu-Main dropdown-menu-end animate slideIn" aria-labelledby="navbarDropdown">
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
                 <a href="" class="dropdown-item">Manage Products</a>
