--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,7 @@
-<div class="dropdown-menu dropmenu-Mob dropmenu-Main dropdown-menu-end animate slideIn" aria-labelledby="navbarDropdown">
+<div class="dropdown-menu dropmenu-Mob dropmenu-Main dropdown-menu-end animate slideIn"
+  aria-labelledby="navbarDropdown">
   {% for category in categories %}
-    <a class="dropdown-item" href="{% url 'category_products' category_id=category.id %}">{{ category.get_friendly_name }}</a>
+  <a class="dropdown-item"
+    href="{% url 'category_products' category_id=category.id %}">{{ category.get_friendly_name }}</a>
   {% endfor %}
 </div>
