--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,7 +18,7 @@
             <hr>
         </div>
         <div class="col text-center mt-3">
-            <h2 class="logo-font">Shop</h2>
+            <h2 class="logo-font sub-heading-font">SHOP {{ category_name }}</h2>
         </div>
     </div>
     <div class="row">
@@ -29,11 +29,11 @@
                     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                         <div class="shadow-drop-center card h-100 border-0">
                             {% if product.image %}
-                            <a href="">
+                            <a href="{% url 'product_detail' product.id %}">
                                 <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                             </a>
                             {% else %}
-                            <a href="">
+                            <a href="{% url 'product_detail' product.id %}">
                                 <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                             </a>
                             {% endif %}
