--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -27,6 +27,7 @@
       <div class="row">
         <div class="col-12 flex-column">
           <div class="d-flex mob-nav-link-padding">
+
             <form class="form-inline" method="GET" action="">
               <div class="input-group w-100">
                 <input class="form-control border border-grey rounded-2 bg-searchbox" type="text" name="q"
@@ -40,6 +41,33 @@
                 </div>
               </div>
             </form>
+
+            <ul class="nav-list-style ml-auto">
+              <li>
+                {% if grand_total > 0 %}
+                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                  href="">
+                  <div class="text-center">
+                    <div class="d-flex align-items-center">
+                      <div class="mr-2">
+                        <i class="fas fa-shopping-bag fa-lg"></i>
+                      </div>
+                      <div>
+                        <p class="my-0">
+                          {% if grand_total %}
+                          ${{ grand_total|floatformat:2 }}
+                          {% else %}
+                          $0.00
+                          {% endif %}
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                {% endif %}
+              </li>
+            </ul>
+
           </div>
         </div>
       </div>
@@ -49,11 +77,12 @@
         <div class="col-12">
           <ul class="navbar-nav mob-nav-link-padding">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 My Account
               </a>
-              <div class="dropdown-menu dropmenu-Mob dropdown-menu-end animate slideIn" aria-labelledby="navbarDropdown">
+              <div class="dropdown-menu dropmenu-Mob dropdown-menu-end animate slideIn"
+                aria-labelledby="navbarDropdown">
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
                 <a href="" class="dropdown-item">Manage Products</a>
@@ -68,8 +97,8 @@
             </li>
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle caret-off" href="#" id="navbarDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Shop
               </a>
               {% include 'includes/main-nav.html' %}
