--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block content %}
+{% if products %}
 <div class="overlay"></div>
 <div class="container-fluid">
     <div class="row">
@@ -81,6 +82,18 @@
             </div>
         </div>
     </div>
-
 </div>
+{% else %}
+<div class="overlay"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 mb-5 hr-prod-top-spacer">
+            <hr>
+        </div>
+        <div class="col text-center mt-3">
+            <p class="text-muted lead">No products match your search</p>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
