add review tabbed area and display

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -284,7 +284,9 @@ body {
 
 /* product details */
 
-
+.review-tabs {
+    padding-bottom: 220px;
+}
 
 /* -------------------------------- Media Queries */
 
