add shop bag app & all product view

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -137,7 +137,7 @@
                         <p>You have already submitted a review for this product.</p>
                         {% endif %}
                         {% else %}
-                        <p>Please <a href="{% url 'account_login' %}">Login</a> or <a
+                        <p class="pt-4 pl-3">Please <a href="{% url 'account_login' %}">Login</a> or <a
                                 href="{% url 'account_signup' %}">Register</a>
                             to submit a review.</p>
                         {% endif %}
