--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -46,7 +46,7 @@
               <li>
                 {% if grand_total > 0 %}
                 <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                  href="">
+                  href="{% url 'view_bag' %}">
                   <div class="text-center">
                     <div class="d-flex align-items-center">
                       <div class="mr-2">
